force-app/main/default/objects/Issue_Incident__c/Issue_Incident__c.object-meta.xml
<CustomObject>
    <label>Issue/Incident</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Issue/Incident Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issue/Incidents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>