force-app/main/default/objects/Issue_Incident__c/fields/Incident_Description__c.field-meta.xml
<CustomField>
    <fullName>Incident_Description__c</fullName>
    <label>Incident Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>