force-app/main/default/objects/Issue_Incident__c/fields/Incident_Title__c.field-meta.xml
<CustomField>
    <fullName>Incident_Title__c</fullName>
    <label>Incident Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>