force-app/main/default/objects/Issue_Incident__c/fields/Incident_Type__c.field-meta.xml
<CustomField>
    <fullName>Incident_Type__c</fullName>
    <label>Incident Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employee Injury</fullName>
            </value>
            <value>
                <fullName>Asset Damage</fullName>
            </value>
            <value>
                <fullName>Vehicle Accident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>