force-app/main/default/objects/Issue_Incident__c/fields/Project_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Project_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Assignment</label>
    <referenceTo>Project_Assignment__c</referenceTo>
    <relationshipLabel>Issue/Incidents</relationshipLabel>
    <relationshipName>Issue_Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>