force-app/main/default/objects/Issue_Incident__c/fields/Project_Line__c.field-meta.xml
<CustomField>
    <fullName>Project_Line__c</fullName>
    <label>Project Line</label>
    <length>100</length>
    <type>Text</type>
</CustomField>